--- a/wiki/统计.org
+++ b/wiki/统计.org
@@ -3239,6 +3239,14 @@ SVM 方法缺点：
 2.SVM 样本量大时，核函数映射维度非常高时，计算量过大，不适用。
 3.遇到非线性问题时不容易找到合适的核函数。
 
+什么是核函数？
+
+对于任意线性不可分的样本集，只要找到高维映射 $\phi$ 就可以在高维空间上划分开了，但是，事实是这个 $\phi$ 并不像上面那个例子那么容易求出来，有时是非常困难的。所以就需要引入核函数
+
+\(K\left(X_{1}, X_{2}\right)=\varphi\left(X_{1}\right)^{T} \varphi\left(X_{2}\right)\)
+
+虽然不知道 $\phi$ 的具体形式，但是，只要知道 $K\left(X_{1},X_{2}\right)$ 就好了。
+
 ** 决策树
 决策树的生成主要由 3 步组成：特征选择\决策树的生成\决策树的修剪。决策树的路径具有一个重要的性质，互斥且完备，即每一个样本均被一条路径所覆盖。
 
@@ -3278,7 +3286,6 @@ SVM 方法缺点：
 - 输出特征 $X$ 与预测 $Y$ 变量强相关，符合普遍认知；
 
 - 核心模型变量不需要特别多，一般不超过20个。
-
 
 - 树的缺点
   - 缺乏平滑性（回归预测时输出值只能输出有限的若干种数值）
