--- a/wiki/统计.org
+++ b/wiki/统计.org
@@ -112,6 +112,16 @@ $$
 
 如何求解损失函数，这里会有很多算法。
 
+** 指数分布族
+
+除了正态分布，其他像二项分布，poisson 分布，负指数分布，gamma 分布等也有重要地位，这些分布其实都是 *指数分布族* 。说明这些分布有着共同的特性。
+
+** 充分统计量
+统计量只能与样本有关，而不能依赖未知的参数 $\theta$.
+
+在给定 $t$ 后， $X$ 的条件分布已不再和 $\theta$ 有关, 则称 $t$ 为充分统计量.
+
+也就是说 $t(x)$ 保留了所有 $x$ 中所含有关于 $\theta$ 的全部信息量.
 ** 数学基础
 ** 标量\向量\矩阵\张量
 ** 2 概率论
@@ -164,10 +174,6 @@ F 分布是两个服从卡方分布的随机变量各自除以他们的自由度
 
 *** U 统计量
 U 统计量是非参数统计分析中常用的一类统计量，由于其具有无偏性，一致性与渐近正态性或混合卡方分布等一些良好的性质。
-
-
-
-
 *** 有监督模型
 知名的有监督模型包括：K-近邻算法、线性回归、逐步回归模型、逻辑回归、支持向量机、决策树和随机森林、神经网络等。
 
@@ -181,7 +187,6 @@ U 统计量是非参数统计分析中常用的一类统计量，由于其具有
 3、倘若自变量因子中，既有属性因子，也有数量因子, **就称为协方差分析模型**.
 
 **** 标准化处理
-
 我们都知道在实际应用中，样本不同的特征的单位不同，会在求距离时造成很大的影响。比 如：在两个样本中肿瘤大小分别为 1cm 和 5cm,发现时间分别为 100 天和 200 天，那么在求距离
 时，时间差为 100,大小差为 4,那么其结果会被时间所主导，因为肿瘤大小的差距太小了。
 但是如果我们把时间用年做单位，0.27 年与 0.55 年的差距又远小于肿瘤的大小的差距，
@@ -197,11 +202,9 @@ Z-score 方法的缺点是该方法需要总体的平均平均值与方差，但
 minmax 归一化方法：$x = \dfrac{x-min}{max - min}$.
 
 **** MaxAbs 归一化
-
 $x = \dfrac{x}{\abs{MAX}}$
 
 这种方法的缺点是当有新的数据加入时，可能导致 max 和 min 的变化
-
 **** vif(方差膨胀因子)
 在多元回归中，可以通过计算方差膨胀系数 VIF 来检验回归模型是否存在严重的多重共线性。
 
@@ -209,7 +212,6 @@ $VIF_{i} = \dfrac{1}{1-R_{i}^{2}}$
 
 其中， $R^{2}_{i}$ 是第 i 个自变量 $x_{i}$ 与其余自变量之间的判定系数。因此，当第 $i$ 个自变量 $x_{i}$ 之间的相关程度愈高，即 $R^{2}_{i}$ 愈接近于 1 时，相应的 vif_{k} 也越大。
 **** 判定系数
-
 $$
 R^{2} = 1 - \dfrac{SSRes}{SStot}
 $$
@@ -225,7 +227,6 @@ $$
 判定系数 $R^{2}$ 越接近于 1,模型的拟合优度越高。
 
 *** 正态分布分布化
-
 正则化的过程是将每个样本缩放到单位范数。normalization 主要思想是对每个样本计算其
 p-范数，然后对该样本中每个元素除以该范数。
 
@@ -237,7 +238,6 @@ p-范数，然后对该样本中每个元素除以该范数。
 法或其他归一化方法。
 
 *** 一般线性回归
-
 线性回归模型假设有 3 个：
 
 - 自变量非随机；
@@ -252,7 +252,7 @@ p-范数，然后对该样本中每个元素除以该范数。
  Y=X\beta+\epsilon
  \]
 
- 式中，因变量 $Y$ 为 $n$ 维向量；自变量 $X$ 为 $n\times p$ 矩阵；误差项 $\epsilon$ 为 $n$ 维向量。需要注意的是在简单回归中，误差项 $\epsilon$ 的元素一般要求是独立同分布零均值的，而通常分布假定为正态的，在最小二乘回归的标准输出中，对系数的 $t$ 检验和方差分析的 F 检验，常常认为 p 值小就意味着“显著”，但需要注意误差是否偏离正态性，如果不考虑正态性或者渐近正态性不成立，那么 t 检验和 F 检验就没有任何意义。
+式中，因变量 $Y$ 为 $n$ 维向量；自变量 $X$ 为 $n\times p$ 矩阵；误差项 $\epsilon$ 为 $n$ 维向量。需要注意的是在简单回归中，误差项 $\epsilon$ 的元素一般要求是独立同分布零均值的，而通常分布假定为正态的，在最小二乘回归的标准输出中，对系数的 $t$ 检验和方差分析的 F 检验，常常认为 p 值小就意味着“显著”，但需要注意误差是否偏离正态性，如果不考虑正态性或者渐近正态性不成立，那么 t 检验和 F 检验就没有任何意义。
 
 在模型比较过程中，需要注意的是对于不满足正态性假定的模型也可以进行互相比较，但所用方法不是这些基于正态性的检验，可以用 AIC 之类的准则或交叉验证来比较。
 
@@ -269,7 +269,6 @@ reg.intercept_
 # => 3.0000000000000018
 reg.predict(np.array([[3, 5]]))
 # => array([16.])
-
 #+end_src
 
 #+begin_src python
@@ -3192,7 +3191,6 @@ c
 #+end_src
 
 ** MCMC
-
 MCMC 也称为统计模拟方法，通过从概率模型的随机抽样进行近似数值计算的方法，则是以马尔可夫链为概率模型的蒙特卡罗法。
 
 马尔可夫链蒙特卡洛法构建一个马尔可夫链，使其平稳分布就是要进行抽样的分布，首先基于马尔可夫链进行随机游走，产生样本的序列，之后使用该平稳分布的样本进行近似的数值计算。
@@ -3204,13 +3202,12 @@ MCMC 也称为统计模拟方法，通过从概率模型的随机抽样进行近
 所以，mcmc 方法的核心就是无法知道总体，但是可以构造样本总体，通过样本得到经验分布，从而估计总体分布；或者从样本计算出样本均值，从而估计总体期望。所以，蒙特卡罗法的核心是随机抽样。
 
 ** svm
-
 概述：svm 是一种二分类模型，定义在特征空间上的间隔最大的线性分类器，核技巧使它成为实质上的非线性分类器。支持向量机的学习策略就是 *间隔最大化* ，等价于求解凸二次规划
 的问题。
 
 当训练数据线性不可分时，通过使用核技巧及软间隔最大化，学习非线性支持向量机。
 
-核方法的基本思想是通过一个非线性变换，把输入数据映射到高维的希尔伯特空间中，在这个高维空间里，那些在原始输入空间中线性不可分的问题变得更加容易解决，甚至线性可分。
+*核方法的基本思想是通过一个非线性变换，把输入数据映射到高维的希尔伯特空间中，在这个高维空间里，那些在原始输入空间中线性不可分的问题变得更加容易解决，甚至线性可分。* 线性可分是指存在可划分的超平面。非线性变换就需要用到核方法，该方法就是把一类低维空间的非线性可分问题，转化为高维空间的线性可分问题的方法，核方法不仅仅用于svm,还可以用于其他数据为非线性可分的算法。
 
 支持向量机（Support Vector Machine，SVM）[10] 是一类最典型的核方法，下面将以支持向量机为例，对核方法进行简单的介绍。
 
@@ -3617,6 +3614,16 @@ decision_tree = decision_tree.fit(iris.data, iris.target)
 r = export_text(decision_tree, feature_names=iris['feature_names'])
 print(r)
 #+end_src
+
+** 保序回归
+常见的研究例子: 随着药物使用量的递增,病人的平均反映情况.
+https://zhuanlan.zhihu.com/p/88623159
+
+保序回归解决以下问题：给定包含 $n$ 个数据点的序列 $y_{1},y_{2},\cdots,y_{n}$, 怎样通过一个单调的序列 $\beta_{1},\beta_{2},⋯,\beta_{n}$ 来归纳这个问题。
+
+\begin{equation}
+\hat{\beta}^{\text {iso }}=\underset{\beta \in \mathbb{R}^{n}}{\operatorname{argmin}} \sum_{i=1}^{n}\left(y_{i}-\beta_{i}\right)^{2} \text { subject to } \beta_{1} \leq \ldots \leq \beta_{n}
+\end{equation}
 
 ** 随机森林
 学习随机森林算法之前有几个问题：
@@ -4537,8 +4544,6 @@ var(x)
 **** 倾向性评分
 
 https://www.jianshu.com/p/6486d2466044
-
-
 
 
 
